# swarm-orchestrator

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup.sh
backend/: config.py  database.py  main.py  mcp_server.py
backend/models/: db_models.py  schemas.py
backend/routers/: health.py  nodes.py  projects.py  registry.py  services.py  stacks.py
backend/services/: builder.py  catalog.py  docker_client.py  health_monitor.py  registry_client.py
definitions/examples/: hello-world.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx  NodeCard.tsx  ServiceRow.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx  Nodes.tsx  Projects.tsx  Registry.tsx  Services.tsx
